# openerz

./: .env.dist  .env.test  .eslintrc  .gitignore  .snyk  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  Vagrantfile  add_desc.py  docker-compose.yml  download_csvs.sh  dump.sql  dump_test_database.sh  eslint.config.mjs  generate_csvs.sh  generate_from_config.py  gulpfile.js  import_csvs.sh  index.js  loadData.js  load_data_in_database.sh  load_data_in_local_database.sh  load_region_in_database.sh  package-lock.json  package.json  pyproject.toml  python_setup.sh  requirements.txt  setup.py  sort_csv.py  start_local_database.sh  start_test_database.sh  status_config.py  update_database.py  validate_config.py
agent/: README.md  __init__.py  __main__.py  test_agent.py  waste_collection_agent.py
config/: example.yml  waste_types.yml
csv/: Entsorgung_Sammelstellen.csv  Entsorgungskalender_Bioabfall_2014.csv  Entsorgungskalender_Bioabfall_2015.csv  Entsorgungskalender_Bioabfall_2016.csv  Entsorgungskalender_Bioabfall_2017.csv  Entsorgungskalender_Bioabfall_2018.csv  Entsorgungskalender_Bioabfall_2019.csv  Entsorgungskalender_Bioabfall_2020.csv  Entsorgungskalender_CargoTram_2014.csv  Entsorgungskalender_CargoTram_2015.csv  Entsorgungskalender_CargoTram_2016.csv  Entsorgungskalender_CargoTram_2017.csv  Entsorgungskalender_CargoTram_2018.csv  Entsorgungskalender_CargoTram_2019.csv  Entsorgungskalender_CargoTram_2020.csv  Entsorgungskalender_Karton_2014.csv  Entsorgungskalender_Karton_2015.csv  Entsorgungskalender_Karton_2016.csv  (+85 more)
docs/: README.md  _config.yml  (+1 more)
(+137 files in other folders)
