[project]
name = "openerz"
version = "0.1.0"
description = "Python helper scripts for OpenERZ"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "docopts>=0.6.1",
    "icalendar>=6.3.2",
    "beautifulsoup4>=4.12.3",
    "pdfminer.six>=20231228",
    "pandas>=2.0.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.3",
    "recurrent>=0.4.1",
    "recurring-ical-events>=3.8.0",
    "requests>=2.32.4",
    "schema>=0.7.8",
]

[project.optional-dependencies]
db = [
  "psycopg2-binary>=2.9.10"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["openerzpy", "agent"]
py-modules = ["openerzpy"]

[tool.uv]
package = true
